--- a/index.html
+++ b/index.html
@@ -42,8 +42,6 @@
             <tr>
                 <td>Task 2</td>
                 <td><a href="tea.html">html-task-2.html</a></td>
-
-                
             </tr>
             <tr>
                 <td>Task 3</td>
@@ -86,6 +84,14 @@
             <tr>
                 <td>Task 7</td>
                 <td><a href="task7.html">css-task-7.css</a></td>
+            </tr>
+            <!-- Additional Information -->
+            <tr>
+                <td colspan="3">
+                    <strong>Name:</strong> Hariharan S <br>
+                    <strong>Branch:</strong> ECE <br>
+                    <strong>Slot:</strong> 11:30 to 1:30
+                </td>
             </tr>
         </tbody>
     </table>
